Checkboxes bugfix.
Removed element #title_display assignment of ‘input’.

According to  Drupal\Core\Render\Element\FormElement, input is no longer an option.

Existing options are: before, after, invisible, attribute.

The first three options would seem not to be options for the usecase and attribute behaved the same as input.

Removed pointer-events as this stopped any interaction with the checkbox elements.

--- a/exo_form/src/ExoThemeProvider/ExoForm/scss/elements/_checkbox.scss
+++ b/exo_form/src/ExoThemeProvider/ExoForm/scss/elements/_checkbox.scss
@@ -20,8 +20,6 @@
 
 .exo-form-checkbox {
   position: relative;
-  // Allow tooltip to function.
-  pointer-events: none;
 
   .exo-form-select-dropdown & {
     pointer-events: auto;
